post previews are equal height; cutoff excerpt at uniform spot; applied css to correct post title

--- a/assets/css/site/layout.css
+++ b/assets/css/site/layout.css
@@ -18,7 +18,7 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 .page-template .site-content {
